# reverse_proxy_test

./: .gitignore  README.md  default.conf  docker-compose.yml  docker_stats2csv.sh  main.py  pyproject.toml  requirements.txt
blog/: index.html
conf/cache/: default.conf
conf/nginx/conf.d/: default.conf
docker/fastapi/: Dockerfile
nginx-sites-enabled/: lb
note/: Report.ipynb  docker_stats.ipynb  nginx_status_manager.py  numpy_basic.ipynb
note/docker_stats/: docker_stats_1.csv  docker_stats_2.csv  docker_stats_3.csv  docker_stats_4.csv  docker_stats_5.csv  docker_stats_6.csv  docker_stats_7.csv
note/nginx_stats/: nginx_stats.csv
note/ngrinder_stats/: ngrinder_stats_1.csv  ngrinder_stats_2.csv  ngrinder_stats_3.csv  ngrinder_stats_4.csv  ngrinder_stats_5.csv  ngrinder_stats_6.csv  ngrinder_stats_7.csv
pyweb1/: index.html
pyweb2/: index.html
pyweb3/: index.html
pyweb4/: index.html
src/reverse_proxy_test/: higher_order_fun.py
